# EduManage_Api

./: .env.example  .gitignore  README.md  admin.py  alembic.ini  api.py  confcelery.py  pyproject.toml
apps/admin/: app.py  forms.py  views.py
apps/events/: assigned_task_router.py  assignment_router.py  container.py  mark_router.py  routers_v1.py
apps/events/cases/: __init__.py  assigned_task_cases.py  assignment_cases.py  mark_cases.py
apps/events/models/: __init__.py  assigned_tasks.py  assignment.py  mark.py  marks.py  task.py  teacher_class.py
apps/events/schemas/: __init__.py  assigned_task.py  assignment.py  mark.py  task.py  teacher_class.py
apps/events/storages/: __init__.py  assigned_task_storage.py  assignment_storage.py  mark_storage.py
apps/events/tasks/: email_tasks.py
apps/group/: __init__.py  container.py  group_router.py  routers_v1.py
apps/group/cases/: __init__.py  group_cases.py
apps/users/: container.py  routers_v1.py  user_router.py
core/: __init__.py  fixtures.py
core/auth/: auth_token.py
core/exceptions/: __init__.py  exceptions.py
core/internals/: __init__.py  decorate_fast_api.py  get_application.py  orm_internal_service.py
core/loggers/: __init__.py  logger.py
core/schemas/: __init__.py
db/: __init__.py  containers.py  fixtures.py  orm.py
scripts/: run_seeds.py
scripts/seeds/: admins.py  assigned_tasks.py  assignments.py  groups.py  marks.py  sign_in_records.py  students.py  teachers.py
settings/: common.py
tests/: __init__.py  conftest.py
tests/unit_tests/: conftest.py  test_group.py  test_mark.py
(+47 files in other folders)
