[tool.poetry]
name = "edumanage-api"
version = "0.1.0"
description = ""
authors = ["DKowalski25 <dshinoda25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
